umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_no3-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_ions
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "N#c+#v4"
      - "O#n2#v2"
      - "O#c-#n3#v"
      - "O#c-#n3#v"
    bonds:
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "N#c+#v4"
      - "O#n2#v2"
      - "O#c-#n3#v"
      - "O#c-#n3#v"
    bonds:
      - "="
      - "-"
      - "-"
